# dummy-data-rust

./: .gitignore  Cargo.toml  README.md
src/: dummy_data_with_autoincremented_id.rs  main.rs
