[package]
name = "dummy-data-rust"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.0", features = ["derive"] }
fake = { version = "2.5", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
rand = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
csv = "1.2"